--- a/Draw/app/src/main/res/layout/activity_screen2.xml
+++ b/Draw/app/src/main/res/layout/activity_screen2.xml
@@ -41,7 +41,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/icon4"
-                android:background="@color/ewhaBeige"/>
+                android:background="@color/ewhaBeige"
+                android:onClick="bt1"/>
 
             <ImageButton
                 android:id="@+id/imageButton4"
@@ -50,13 +51,15 @@
                 android:layout_weight="1"
                 app:srcCompat="@drawable/icon1"
                 android:background="@color/ewhaBeige"
+                android:onClick="bt2"
                 />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical"
+            ></LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,7 +72,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/icon2"
-                android:background="@color/ewhaBeige"/>
+                android:background="@color/ewhaBeige"
+                android:onClick="bt3"
+                />
 
             <ImageButton
                 android:id="@+id/imageButton11"
@@ -77,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/icon3"
-                android:background="@color/ewhaBeige"/>
+                android:background="@color/ewhaBeige"
+                android:onClick="bt4"/>
         </LinearLayout>
 
     </LinearLayout>
