--- a/Draw/app/src/main/res/xml/widget_info.xml
+++ b/Draw/app/src/main/res/xml/widget_info.xml
@@ -2,8 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/widget"
     android:initialLayout="@layout/widget"
-    android:minWidth="250dp"
-    android:minHeight="40dp"
+    android:minWidth="110dp"
+    android:minHeight="110dp"
+    android:minResizeHeight="40dp"
     android:previewImage="@drawable/icon1"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
