--- a/Draw/app/src/main/res/layout/widget.xml
+++ b/Draw/app/src/main/res/layout/widget.xml
@@ -16,7 +16,7 @@
 
 
         <ImageButton
-            android:id="@+id/imgBtn_tag01"
+            android:id="@+id/widget_imgBtn_motive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -26,7 +26,7 @@
             android:src="@drawable/icon1" />
 
         <ImageButton
-            android:id="@+id/imgBtn_tag02"
+            android:id="@+id/widget_imgBtn_healing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -36,7 +36,7 @@
             android:src="@drawable/icon2" />
 
         <ImageButton
-            android:id="@+id/imgBtn_tag03"
+            android:id="@+id/widget_imgBtn_boring"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -46,7 +46,7 @@
             android:src="@drawable/icon3" />
 
         <ImageButton
-            android:id="@+id/imgBtn_tag04"
+            android:id="@+id/widget_imgBtn_refresh"
             style="@style/Widget.AppCompat.ImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
