--- a/Draw/app/src/main/res/layout/widget2.xml
+++ b/Draw/app/src/main/res/layout/widget2.xml
@@ -6,23 +6,34 @@
     android:padding="@dimen/widget_margin">
 
     <LinearLayout
+        android:id="@+id/widget_layout_02"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="visible"
+        android:gravity="center_vertical">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/widget_imgBtn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitStart"
-            app:srcCompat="@android:drawable/ic_input_delete" />
+            android:layout_marginLeft="5dp"
+            android:background="#00747474"
+            android:scaleType="fitCenter"
+            android:src="@android:drawable/ic_input_delete" />
 
-        <EditText
+        <TextView
             android:id="@+id/widget_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="Hello"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
     </LinearLayout>
+
+
 </RelativeLayout>
