--- a/Draw/app/src/main/res/xml/widget_info.xml
+++ b/Draw/app/src/main/res/xml/widget_info.xml
@@ -7,5 +7,5 @@
     android:minResizeHeight="40dp"
     android:previewImage="@drawable/icon1"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="50000"
     android:widgetCategory="home_screen"></appwidget-provider>
