--- a/Draw/app/src/main/res/values/colors.xml
+++ b/Draw/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="ewhaGoldBlur">#CC89734C</color>
     <color name="ewhaBeige">#D9D9B8</color>
     <color name="ewhaGold">#89734C</color>
+    <color name="grapefruit">#FF9C96</color>
+    <color name="blue">#A2E9E9</color>
 </resources>
