--- a/Draw/app/src/main/res/drawable/custom_button.xml
+++ b/Draw/app/src/main/res/drawable/custom_button.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="false" android:state_pressed="false">
         <shape>
-            <solid android:color="@color/ewhaGoldBlur"/>
+            <solid android:color="#FF9C96" />
 
+            <corners android:radius="10dp" />
 
-            <corners android:radius="5dp" />
         </shape>
     </item>
 
