--- a/Draw/app/src/main/res/layout/activity_screen2.xml
+++ b/Draw/app/src/main/res/layout/activity_screen2.xml
@@ -4,31 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screen2"
-    android:background="@color/ewhaBeige">
+    android:background="@drawable/gradient"
+    tools:context=".screen2">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/screen2_button_box"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="199dp"
-        tools:layout_editor_absoluteY="327dp">
-
-        <TextView
-            android:id="@+id/scrn01_textView"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="해당 문구에 해당하는 상황을 고르세요"
-            android:textSize="20dp"
-            android:gravity="center_horizontal"
-            android:background="@color/colorBackground"
-            android:textColor="@color/ewhaYellowGreen"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal" />
+        android:paddingLeft="10dp"
+        android:paddingTop="20dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,25 +31,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/icon4"
-                android:background="@color/ewhaBeige"
-                android:onClick="bt1"/>
+                android:background="#FFFF"
+                android:onClick="bt1"
+                app:srcCompat="@drawable/icon4" />
 
             <ImageButton
                 android:id="@+id/scrn02Btn_healing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/icon1"
-                android:background="@color/ewhaBeige"
+                android:background="#FFFF"
                 android:onClick="bt2"
-                />
+                app:srcCompat="@drawable/icon1" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,19 +55,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/icon2"
-                android:background="@color/ewhaBeige"
-                android:onClick="bt3"/>
+                android:background="#FFFF"
+                android:onClick="bt3"
+                app:srcCompat="@drawable/icon2" />
 
             <ImageButton
                 android:id="@+id/scrn02Btn_refresh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/icon3"
-                android:background="@color/ewhaBeige"
-                android:onClick="bt4"/>
+                android:background="#FFFF"
+                android:onClick="bt4"
+                app:srcCompat="@drawable/icon3" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingTop="20dp"
+            android:text="해당 문구의 상황을 고르세요"
+            android:textColor="#000000" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
