--- a/Draw/app/src/main/res/layout/widget.xml
+++ b/Draw/app/src/main/res/layout/widget.xml
@@ -14,7 +14,7 @@
         android:baselineAligned="true"
         android:gravity="center"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="gone">
 
 
         <ImageButton
@@ -67,13 +67,14 @@
         android:layout_height="match_parent"
         android:gravity="top|center_vertical"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageButton
             android:id="@+id/widget_imgBtn_back"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="right"
+            android:layout_margin="5dp"
             android:layout_marginRight="5dp"
             android:background="#00747474"
             android:scaleType="fitCenter"
